--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -18,7 +18,6 @@ section.pics {
   border-bottom: 6px solid #333333;
   border-top: 6px solid #333333;
   float: left;
-  overflow: hidden;
 }
 
 section.top-info > section.pics > div.main-pic {
@@ -87,11 +86,11 @@ div.image-file-input-wrapper > input[type="file"]:hover {
  cursor: pointer;
 }
 
-div.image-file-input-wrapper > .remove {
+div.image-file-input-wrapper .remove {
   position: absolute;
   display: block;
-  width: 15%;
-  height: 15%;
+  width: 10px;
+  height: 10px;
   top: -5px;
   right: -5px;
   background: black;
@@ -137,6 +136,43 @@ ul.thumbs .progress {
 .main-pic .progress {
   font-size: 30px;
   line-height: 300px;
+}
+
+div.image-file-input-wrapper > ul.errors {
+  list-style: square;
+  font-size: 13px;
+  display: none;
+  position: absolute;
+  left: 20%;
+  bottom: 58px;
+  width: 350px;
+  border: 2px solid red;
+  padding: 5px 0 5px 25px;
+  background: white;
+  z-index: 6;
+}
+
+ul.errors > .remove {
+  z-index: 7;
+}
+
+.main-pic div.image-file-input-wrapper > ul.errors {
+  top: -20px;
+  bottom: inherit;
+}
+
+ul.errors > .triangle {
+  position: absolute;
+  bottom: -20px;
+  left: 10px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-top: 10px solid red;
+}
+
+div.image-file-input-wrapper.errors > ul.errors {
+  display: block;
 }
 
 
