Nicer nil checks at model level for listing#vin.

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -46,7 +46,7 @@
         </li>
         <li>
           <label><strong>VIN:</strong></label>
-          <span><%= @listing.vin.try(:empty?) ? 'N/A' : @listing.vin %></span>
+          <span><%= @listing.vin %></span>
         </li>
         <li>
           <label><strong>Seller:</strong></label>
