--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,416 +1,1 @@
-
-<%= form_for @listing, html: {multipart: true} do |f| %>
-
-<h1 class="listing-name">Fill info below</h1>
-
-<h3>
-  <% title_errors = @listing.errors[:title] %>
-  <div class="<%= "field-with-errors" if !title_errors.empty? %>">
-
-    <% unless title_errors.empty? %>
-    <p>Title <%= title_errors.to_sentence %>.</p>
-    <% end %>
-
-    <%= f.text_field :title, placeholder: "Catchy title here (ex: This car is blue, like the Aegean Sea. It's new to you, but it's old to me.)" %>
-  </div>
-</h3>
-
-<section class="top-info clear-fix">
-  <section class="pics">
-    <div class="main-pic"></div>
-    <ul class="thumbs clear-fix"></ul>
-  </section>
-
-  <script type="text/template" id="image-file-input-wrapper">
-  <%% var timeStamp = new Date().getTime().toString() %>
-  <%%= (!opts.main) ? '<li>' : ''  %>
-    <div class="image-file-input-wrapper <%%= (opts.errors) ? 'errors' : '' %>">
-      <img class="car-pic" src="<%%= opts.src %>">
-      <input class="pic_file" type="file" name="pics[<%%= timeStamp %>][file]">
-      <input type="hidden" class="pic_token" name="pics[<%%= timeStamp %>][token]" value="<%%= opts.token %>">
-      <span style="<%%= (opts.empty) ? 'display:none;' : ''  %>"
-            class="remove">
-      </span>
-      <span class="progress"></span>
-      <span class="errors">
-        <div class="triangle"></div>
-        <span class="remove"></span>
-        <p class="message">
-          File must be a picture of type
-          <%= Pic::ACCEPTED_TYPES.to_sentence(last_word_connector: ' or ') %>
-          under <%= Pic::MAX_SIZE / 1.megabyte %>Mb in size.
-          <br><br>
-          Please select another file. This one will not be uploaded.
-        </p>
-      </span>
-    </div>
-  <%%= (!opts.main)  ? '</li>' : ''  %>
-  </script>
-
-
-
-  <script>
-  $(document).ready(function() {
-    var picTemplateFn = _.template($('#image-file-input-wrapper').html());
-
-    $('div.main-pic').html(
-      <% if @listing.pics[0] %>
-      picTemplateFn({opts:
-                      {src: '<%= @listing.pics[0].file.url %>',
-                       main: true,
-                       errors: <%= @listing.pics[0].invalid? %>,
-                       token: '<%= @listing.pics[0].token %>'}
-                    })
-      <% else %>
-      picTemplateFn({opts:
-                      {empty:  true,
-                       main:   true,
-                       src:    '<%= asset_path "camera_icon.png" %>'}
-                    })
-      <% end %>
-    );
-
-    $('div.main-pic').on('change', 'input.pic_file', function() {
-      readUrl(this);
-    });
-
-    $('div.main-pic').on('click', '.remove', function() {
-      var picWrap = picTemplateFn({opts:
-                                    {main: true,
-                                     empty: true,
-                                     src: '<%= asset_path "camera_icon.png" %>'}
-                                  });
-      $('div.main-pic').html(picWrap);
-    });
-
-
-    <% thumbs = @listing.pics[1..-1] %>
-    <% thumbs && thumbs.each do |pic| %>
-    $('ul.thumbs').append(picTemplateFn({opts:
-                                          {src: '<%= pic.file.url %>',
-                                           errors: <%= pic.invalid? %>,
-                                           token: '<%= pic.token %>'}
-                                        }));
-    <% end %>
-    var picWrap = picTemplateFn({opts:
-                                  {empty: true,
-                                   src: '<%=asset_path "camera_icon.png" %>'}
-                                });
-    $('ul.thumbs').append(picWrap);
-
-    $('ul.thumbs').on('change', 'input.pic_file', function(event) {
-      readUrl(this);
-      ensureLastEmptyPic();
-    });
-
-    $('ul.thumbs').on('click', 'span.remove', function() {
-      $(this).parents('li').remove();
-    });
-
-    function readUrl(input) {
-      if (input.files && input.files[0]) {
-        var file = input.files[0]
-        var $fileInput = $(input);
-
-        if ( validateImageSize(file) && validateImageType(file) ) {
-          $fileInput.parent().removeClass('errors');
-          $fileInput.parent().addClass('busy');
-          $fileInput.siblings('.progress').html('0%')
-          $fileInput.siblings('.remove').show();
-
-
-          var reader = new FileReader();
-          reader.onload = function(e) {
-            var picData = e.target.result;
-
-            postAttachment(picData, $fileInput);
-            $(input).siblings('img.car-pic').attr('src', picData);
-          };
-          reader.onerror = function(e) {
-            $fileInput.parent().addClass('errors');
-            var oopsMsg = 'Oops. Something went wrong. Please close \
-                           this dialog box and try again.';
-            $fileInput.siblings('.errors').find('.message').html(oopsMsg);
-          };
-
-
-          reader.readAsDataURL(input.files[0]);
-        }
-        else {
-          $fileInput.parent().addClass('errors');
-        }
-      }
-    };
-
-    function validateImageType(file) {
-      if (/jpg|jpeg|png|bmp/.exec(file.type)) {
-        return true;
-      }
-    };
-
-    function validateImageSize(file) {
-      if (file.size / (1024 * 1024) < 4) {
-        return true;
-      }
-    };
-
-    function postAttachment(picData, $fileInput) {
-      $.ajax({
-        method: 'POST',
-        enctype: 'multipart/form-data',
-        url: "<%= pics_url %>",
-        data: {pic_data: picData},
-        xhr: function () {
-          var xhr = new window.XMLHttpRequest();
-          xhr.upload.onprogress = progressHandler.bind($fileInput);
-          return xhr;
-        },
-        beforeSend: function() {
-          // Set spinner. Now handled in #readUrl with .progress.
-        },
-        success: function(data) {
-          $fileInput.siblings('input.pic_token').val(data['token']);
-        },
-        error: function(xhr) {
-          $fileInput.parent().addClass('errors');
-        },
-        complete: function () {
-          $bar = $fileInput.siblings('.progress')
-          liftProgressVeil($bar, 100, 500, function() {
-            $fileInput.removeAttr('name');
-            $fileInput.parent().removeClass('busy');
-          });
-        }
-      });
-    };
-
-    function progressHandler (e) {
-      // Bound to fileInput
-      if (e.lengthComputable) {
-        var percentComplete = Math.round(e.loaded / e.total * 92);
-        var $bar = this.siblings('.progress');
-        liftProgressVeil($bar, percentComplete, 100);
-      }
-    };
-
-    function liftProgressVeil ($bar, percent, duration, cb) {
-      $bar.html('' + percent + '%' );
-      var height = '' + (100 - percent) + '%';
-      $bar.animate({height: height}, {duration: duration, complete: cb});
-    };
-
-    function ensureLastEmptyPic() {
-      var lastFileInputVal = $('input.pic_file').last().val();
-      var lastSrcInputVal = $('input.pic_token').last().val();
-      if (lastFileInputVal.length > 0 || lastSrcInputVal.length > 0) {
-        var picWrap = picTemplateFn({opts:
-                                      {empty: true,
-                                       src: '<%=asset_path "camera_icon.png"%>'}
-                                    });
-        $('ul.thumbs').append(picWrap);
-       }
-     };
-  });
-  </script>
-
-
-  <section class="info">
-    <article class="car-info">
-      <header>What it is:</header>
-
-      <ul>
-        <li>
-          <% year_errors = @listing.errors[:year] %>
-          <div class="clear-fix<%= " field-with-errors" if !year_errors.empty? %>">
-
-            <% unless year_errors.empty? %>
-            <p>Year <%= year_errors.to_sentence %>.</p>
-            <% end %>
-
-            <%= f.label :year, "Year:" %>
-            <span>
-              <%= f.number_field :year, max: Time.now.year+1, min: 1920 %>
-            </span>
-          </div>
-        </li>
-        <li>
-          <% make_errors = @listing.errors[:make_id] %>
-          <div class="clear-fix<%= " field-with-errors" if !make_errors.empty? %>">
-            <% unless make_errors.empty? %>
-            <p>Make <%= make_errors.to_sentence %>.</p>
-            <% end %>
-            <%= f.label :make, "Make:" %>
-            <span>
-              <%= f.collection_select(:make_id, Subdivision.all_makes, :id, :name, prompt: true) %>
-            </span>
-          </div>
-        </li>
-        <li>
-          <% model_errors = @listing.errors[:model_id] %>
-          <div class="clear-fix<%= " field-with-errors" if !model_errors.empty? %>">
-            <% unless model_errors.empty? %>
-              <p>Model <%= model_errors.to_sentence %>.</p>
-            <% end %>
-
-            <%= f.label :model, "Model:" %>
-            <span>
-              <select id="listing_model" name=listing[model_id]></select>
-            </span>
-          </div>
-        </li>
-        <li>
-          <% miles_errors = @listing.errors[:miles] %>
-          <div class="clear-fix<%= " field-with-errors" if !miles_errors.empty? %>">
-          <% unless miles_errors.empty? %>
-          <p>Miles <%= miles_errors.to_sentence %>.</p>
-          <% end %>
-            <%= f.label :miles, "Miles:" %>
-            <span>
-              <%= f.number_field :miles, min: 0 %>
-            </span>
-          </div>
-        </li>
-
-        <li>
-          <% tranny_errors = @listing.errors[:transmission] %>
-          <div class="clear-fix<%= " field-with-errors" if !tranny_errors.empty? %>">
-
-            <% unless tranny_errors.empty? %>
-            <p>Transmission <%= tranny_errors.to_sentence %>.</p>
-            <% end %>
-
-            <%= f.label :transmission, "Transmission:" %>
-            <span>
-              <%= f.radio_button :transmission, 1 %>
-              <%= f.label :transmission_1, "Automatic" %>
-              <br>
-              <%= f.radio_button :transmission, 2 %>
-              <%= f.label :transmission_2, "Manual" %>
-            </span>
-          </div>
-        </li>
-
-        <li>
-          <% vin_errors = @listing.errors[:vin] %>
-          <div class="clear-fix<%= " field-with-errors" if !vin_errors.empty? %>">
-            <% unless vin_errors.empty? %>
-            <p>VIN <%= vin_errors.to_sentence %>.</p>
-            <% end %>
-
-            <%= f.label :vin, "VIN:" %>
-            <span>
-              <%= f.text_field :vin %>
-            </span>
-          </div>
-        </li>
-        <li>
-          <% by_owner_errors = @listing.errors[:by_owner] %>
-          <div class="clear-fix<%= " field-with-errors" if !by_owner_errors.empty? %>">
-
-            <% unless by_owner_errors.empty? %>
-            <p>By Owner <%= by_owner_errors.to_sentence %>.</p>
-            <% end %>
-
-            <label>Seller:</label>
-            <span><%= @listing.by_owner? ? "BY OWNER" : "DEALER" %></span>
-          </div>
-        </li>
-        <li>
-          <% phone_errors = @listing.errors[:phone] %>
-          <div class="clear-fix<%= " field-with-errors" if !phone_errors.empty? %>">
-
-            <% unless phone_errors.empty? %>
-            <p>Phone <%= phone_errors.to_sentence %>.</p>
-            <% end %>
-
-            <%= f.label :phone, "Phone:" %>
-            <span>
-              <%= f.text_field :phone, value: number_to_phone(current_user.phone) %>
-            </span>
-          </div>
-        </li>
-        <li>
-          <% price_errors = @listing.errors[:price] %>
-          <div class="clear-fix<%= " field-with-errors" if !price_errors.empty? %>">
-
-            <% unless price_errors.empty? %>
-            <p>Asking price <%= price_errors.to_sentence %>.</p>
-            <% end %>
-
-            <label>Asking:</label>
-            <span>$<%= f.number_field :price, min: 0 %></span>
-          </div>
-        </li>
-      </ul>
-    </article>
-  </section>
-</section>
-
-<section class="description">
-  <span><h2>Description</h2>Must be at least 150 characters. You're at
-    <span class="description-char-count">
-      <%= @listing.description && @listing.description.length || 0 %>
-    </span> now.
-  </span>
-  <% description_errors = @listing.errors[:description] %>
-  <div class="clear-fix<%= " field-with-errors" if !description_errors.empty? %>">
-    <% unless description_errors.empty? %>
-    <p>Description <%= description_errors.to_sentence %>.</p>
-    <% end %>
-
-    <p><%= f.text_area :description %></p>
-  </div>
-</section>
-
-  <%= f.submit "Save" %>
-<% end %>
-
-
-
-<div style="display:none;" class="hidden-select-options">
-  <% Subdivision.all_models.each do |model| %>
-  <option value="<%= model.id %>" data-make-id="<%= model.parent_id %>">
-    <%= model.name %>
-  </option>
-  <% end %>
-</div>
-
-
-<script>
-$(document).ready(function() {
-  var makeSelect = $("select#listing_make_id");
-  var modelSelect = $("select#listing_model");
-
-  updateModelSelect(<%= @listing.model_id %>);
-  makeSelect.on("change", updateModelSelect);
-
-  function updateModelSelect(selected) {
-    modelSelect.empty();
-    var selectedMakeId = makeSelect.val();
-
-    if (makeSelect.val()) {
-      modelSelect.prop('disabled', false);
-      modelSelect.append("<option>Please select</option>")
-      $("div.hidden-select-options > option").each(function(_, option) {
-        var $option = $(option).clone();
-        var optionMakeId = $option.attr("data-make-id");
-        if (optionMakeId === selectedMakeId) {
-          modelSelect.append($option);
-          if (selected && parseInt($option.val()) === selected) {
-            $option.prop('selected', true);
-          }
-        }
-      });
-    }
-    else {
-      modelSelect.prop('disabled', true);
-      modelSelect.append("<option>Select make first</option>");
-    }
-  };
-
-  var $description = $("textarea#listing_description")
-  $description.on("keyup", function(event) {
-    $("span.description-char-count").html($description.val().length);
-  });
-});
-</script>
+<%= render partial: 'form' %>
