Listings index view started.

--- a/app/views/listings/_search_results.html.erb
+++ b/app/views/listings/_search_results.html.erb
@@ -21,7 +21,9 @@
     <% end %>
   </header>
 
-  <%= render @listings %>
+  <section class="listings">
+    <%#= render @listings %>
+  </section>
 
   <h2 id="end-of-page">
     Fetching more listings
