--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -8,7 +8,9 @@
   <%= render partial: "listings/infinite_scroll_params" %>
 </section>
 
-
+<script type="application/json" id="bootstrapped-listings">
+  <%= @listings.to_json.html_safe %>
+</script>
 
 <script>
 $(document).ready(function () {
@@ -16,7 +18,7 @@ $(document).ready(function () {
 
   $(window).scroll(function(event) {
     var distanceFromBottom = function () {
-      var doc = $(document)
+      var doc = $(document);
       return doc.height() - (window.innerHeight + doc.scrollTop())
     };
 
